tests/diagnostics/statements/control_flow/unreachable_after_break/expect.txt
# exit: 1
input/lib.coppice:4:9: error: unreachable code
          return 1
          ^
